--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(251, 255, 0);
+    background-image: url("https://buzzrx.s3.amazonaws.com/62b623f8-cdf0-4adb-8df3-cf3a1cbbf2a4/TargetBMIForEveryAge.png");
     font-family: 'Roboto', sans-serif;
     color: rgb(255, 255, 255);
 }
